Tests/project2/errors/decl.flm
/* This tests for bad declarations - no semicolon */

fun foo()
    a:int;
    b:int
    begin
    bar(a,b,c)
    end


        
